@@ -40,6 +40,8 @@ Library
 - Issue #23812: Fix asyncio.Queue.get() to avoid loosing items on cancellation.
   Patch by Gustavo J. A. M. Carneiro.
 
+- Issue #24791: Fix grammar regression for call syntax: 'g(*a or b)'.
+
 Documentation
 -------------
 
